hphp/test/vm/reserved_class2.php.expectf
HipHop Fatal error: Cannot use 'string' as class name as it is reserved in %s on line 2
